# Scout

./: .gitignore  .gitmodules  RC_Bil_Boiler_Room_Projekt.docx  README.md  TODO.md
.github/workflows/: build.yml
cam/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
cam/main/: CMakeLists.txt  idf_component.yml  main.c
components/gpio/: CMakeLists.txt
components/hal/: CMakeLists.txt  README.md
components/rc_protocol/: rc_protocol.h
components/rgb_lcd_port/: CMakeLists.txt  rgb_lcd_port.c  rgb_lcd_port.h
components/scout_hal/: ICamera.hpp  IDisplay.hpp  IMotor.hpp  INetwork.hpp
components/udp/: CMakeLists.txt  udp.c  udp.h
dashboard/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
dashboard/main/: CMakeLists.txt  main.c
docs/: CHANGELOG.md  CODING_STYLE.md  CONTRIBUTING.md  Runtime_Improvements.md  TASK_TEMPLATE.md  TODO.md  scout_cam_flow.md  scout_screen_flow.md
docs/changelogs/: Changelog 2026-06-04-fix-simplify-codebase-screen.md  feature-UART-livestream.md  feature-add-custom-resolution.md  feature-cam-diagnostics.md  feature-hal-and-cam-monitor.md  feature-intro-screen.md  feature-loading-screen.md  feature-scene-state-machine.md  feature-signal-lost-screen.md  feature-stream-pause.md  feature-stream-performance.md  feature-task-architecture.md  feature-uart-monitor-tests.md  feature-ui-design.md  feature-ui-sim.md  feature-wire-ui-connections.md  fix-adapter-layers.md  fix-ci-idf-version.md  fix-render_task_issues.md  fix-restructure-code.md  fix-simplify-codebase-screen.md  fix-task-refactor.md  fix-task-watchdog.md  fix-transport-layer.md  fix-watchdog-cam-recovery.md  fix-watchdog-shared.md  refactor-screen-state.md
docs/implementation/: plan.md
docs/old/: Changelog 2026-05-26-main.md  RC_Bil_Boiler_Room_Projekt.md  Runtime_Improvements.md  TODO.md  feature-readme-ci-linting.md
firmware/cam/: CMakeLists.txt  sdkconfig.defaults
firmware/screen/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
scout-sim/: .gitignore  CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h
scout-sim/include/: sensor_hal.h  ui_dashboard.h
scout-sim/src/: main.c  sensor_sim.c  ui_dashboard.c
scout_cam/: CMakeLists.txt  sdkconfig.defaults
scout_cam/main/: CMakeLists.txt  frag_tx.h  idf_component.yml  main.c  main.cpp  monitor.c  monitor.cpp  monitor.h  motor.c  motor.h  stream.c  stream.h  telemetry.c  telemetry.h  uart_console.c  uart_console.h  udp_stream.c  udp_stream.cpp  udp_stream.h  udp_stream.hpp  wifi_sta.c  wifi_sta.h
scout_screen/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
scout_screen/components/lvgl_port/: CMakeLists.txt  lv_conf.h  lvgl_port.c  lvgl_port.h  lvgl_port_ui.c  lvgl_port_ui.h  ui.c  ui.h
scout_screen/main/: CMakeLists.txt  frag_rx.c  idf_component.yml  main.c  main.cpp  monitor.c  monitor.h  monitor_cmds.c  render.c  render.cpp  render.h  render.hpp  stream.c  stream.h  uart_console.c  uart_console.h  wifi.c
scout_screen/main/adapters/: cam_cmd.c  cam_cmd.h  cam_diag.c  cam_diag.h  frag_rx.h  frame_buf.c  frame_buf.h  monitor_cmds.c  monitor_cmds.h  ring_buffer.c  ring_buffer.h  scene.c  scene.h  screen_state.c  screen_state.h
screen/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
screen/main/: CMakeLists.txt  font8x8.h  idf_component.yml  lv_conf.h  main.c
shared_components/jpeg/: CMakeLists.txt  jpeg.c  jpeg.h
shared_components/rc_protocol/: rc_protocol.h
shared_components/scout_hal/: CMakeLists.txt
sim/: Makefile  README.md  display.h  lv_conf.h  main.c  press_start_2p_24.c  press_start_2p_8.c  sim_screen.h  ui.c
test/: CMakeLists.txt  main.cpp  test_camera.cpp  test_display.cpp  test_motor.cpp  test_network.cpp  test_runner.hpp
tests/: test_uart_monitor.py
(+105 files in other folders)
